--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-index <h2 th:text="${user}+你好"/> 你好
+you are  success!!!
 </body>
 </html>
